--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,39 @@
+@misc{computecpp,
+    author = {{Codeplay Software Ltd.}},
+    title = {ComputeCpp},
+    note = {Online; \url{https://www.codeplay.com/products/computesuite/computecpp}, zuletzt abgerufen am 19. August 2019}
+}
+
+@misc{hipsycl,
+    author = {Alpay, Aksel},
+    title = {hipSYCL -- Implementation of SYCL 1.2.1 over AMD HIP/NVIDIA CUDA},
+    note = {Online; \url{https://github.com/illuhad/hipSYCL}, zuletzt abgerufen am 19. August 2019}
+}
+
+@misc{intelsycl,
+    author = {Bader, Alexey and Lazarev, Vladimir and Airlie, Dave and Faye-Lund, Erik and Podchishchaeva, Mariya and Chen, Kurt and Klochkov, Vyacheslav and Toguchi, Michael and Savonichev, Andrew and Blower, Melanie and Bobrovsky, Konstantin and Chittireddy, Sindhu and Maksimova, Viktoria and Brodman, James and Sidorov, Dmitry and Pennycook, John and Gindinson, Artem and Voronov, Alexey and Gainullin, Artur and Semenov, Sergey and Gupta, Garima and Romanov, Vlad and Keir, Paul and Hammond, Jeff and Premanand, Rao and Keane, Erich and Merritt, Steve and Dai, Chunyang and Zverev, Sergey and Andrews, Elizabeth and Lomuller, Victor and Batashev, Alexander and Karachun, Ivan and Yan, Domi and Cranmer, Joshua and Kinsner, Michael and Reyes, Ruyman and Wood, David and Lychkov, Mikhail and Dmitriev, Sergey and Tian, Shilei and Sotkin, Alexey and Narayanaswamy, Ravi and Stepykin, Ilya and Gozillon, Andrew and Adams, Stuart and Stephan, Jan and Mendel, Mark and Maslov, Sergey and Dubinov, Igor},
+    title = {Intel Project for LLVM technology},
+    note = {Online; \url{https://github.com/intel/llvm}, zuletzt abgerufen am 19. August 2019}
+}
+
+@misc{sycltech,
+    author = {{Codeplay Software Ltd.}},
+    title = {sycl.tech},
+    note = {Online; \url{http://sycl.tech}, zuletzt abgerufen am 19. August 2019}
+}
+
+@misc{trisycl,
+    author = {Keryell, Ronan and Honorat, Alexandre and Thibault, Joan and Nagy-Egri, Máté Ferenc and Kallioniemi, Ville and Doumoulakis, Anastasios and Hsu, Min-Yih and Perkins, Hugh and Yu, Lin-Ya and Salzmann, Philip and Airlie, Dave and Withaar, Thijs and Gozillon, Andrew and Amstutz, Jefferson and Keir, Paul and Ficarelli, Federico and Dulek, Ruben},
+    title = {triSYCL -- Generic system"=wide modern C++ for heterogeneous platforms with SYCL from Khronos Group},
+    note = {Online; \url{https://github.com/triSYCL/triSYCL}, zuletzt abgerufen am 19. August 2019}
+}
+
+@misc{trisyclclang,
+    author = {Keryell, Ronan and Gozillon, Andrew and Lezaud, Victor},
+    title = {sycl -- Experimental fusion of triSYCL with Intel SYCL upstreaming effort into Clang/LLVM},
+    note = {Online; \url{https://github.com/triSYCL/sycl}, zuletzt abgerufen am 19. August 2019}
+}
+
 @inproceedings{howes2006,
     author = {Howes, Lee W. and Price, Paul and Mencer, Oskar and Beckmann, Olav and Pell, Oliver},
     title = {Comparing FPGAs to Graphics Accelerators and the Playstation 2 Using a Unified Source Description},
@@ -26,6 +62,16 @@
     institution = {Codeplay Software Ltd.},
     type = {Vorschlag für das C++-Standardisierungsverfahren. Untergruppe EWG, Studiengruppen SG1 und SG14.},
     number = {Dokumentennummer P0236R0},
+}
+
+@thesis{zuzek2016,
+    author = {Žužek, Peter},
+    title = {Implementacija knjižnice SYCL za heterogeno računanje},
+    year = 2016,
+    month = mar,
+    school = {Univerza v Ljubljani},
+    type = {Masterarbeit},
+    address = {Kongresni trg 12, 1000 Ljubljana, Republik Slowenien}
 }
 
 @inproceedings{fifield2016,
@@ -96,4 +142,24 @@
     journal = {The Journal of Supercomputing},
     note = {Nach Auskunft des Verlages keiner speziellen Ausgabe zugeordnet.},
     doi = {10.1007/s11227-019-02925-3}
+}
+
+@manual{sdaccelopt2019,
+    author = {{Xilinx, Inc.}},
+    title = {SDAccel Environment Profiling and Optimization Guide},
+    year = 2019,
+    month = jun,
+    edition = {UG1207 (v2019.1)},
+    organization = {Xilinx, Inc.},
+    address = {2100 Logic Drive, San Jose, CA 95124, Vereinigte Staaten von Amerika}
+}
+
+@manual{sdxpragma2019,
+    author = {{Xilinx, Inc.}},
+    title = {SDx Pragma Reference Guide},
+    year = 2019,
+    month = jun,
+    edition = {UG1253 (v2019.1)},
+    organization = {Xilinx, Inc.},
+    address = {2100 Logic Drive, San Jose, CA 95124, Vereinigte Staaten von Amerika}
 }
