--- a/einleitung.tex
+++ b/einleitung.tex
@@ -3,6 +3,9 @@
 \section{Motivation}\label{einleitung:motivation}
 
 \gls{fpga}
+
+\gls{gpgpu}
+
 \gls{kernel}
 
 \section{Forschungsstand}\label{einleitung:forschung}
@@ -17,5 +20,8 @@
 \cite{burns2019} - SYCL-DNN (plattformunabhängig) vs. cuDNN, MIOpen (plattformabhängig) \\
 \cite{sycl2019} - SYCL-Spec.\\
 \cite{rodriguez-gutiez2019} - portables BLAS
+
+Hervorzuheben ist außerdem Peter Žužeks Masterarbeit aus dem Jahre 2016, in
+deren Rahmen eine eigene \gls{sycl}"=Implementierung entwickelt wurde. \cite{zuzek2016}
 
 \section{Ziel der Arbeit}\label{einleitung:ziel}
